[graphql] Add support for clever error resolution in graphql (#17338)
Adds support for clever errors to GraphQL. So now, if you have code like
the following:
```move
module p::m {
   #[error]
    const ENotFound: vector<u8> = b"Element was unable to be found in the vector"

    public fun abort() {
        assert!(false, ENotFound); // Can also be an `abort ENotFound`
    }
}
```

This will result in a humand-readable output from graphql:
```
Error in 1st command
'ENotFound' from module '0x8fd7251015bfd1dc4283bb3d38dc95a2769f75d621c871a81bb9c191a2860aaf::m' in function 'abort' at source line 6
The element was unable to be found in the vector
```

Added tests for all supported constant types, along with tests to make
sure that we properly handle package upgrades and resolving to the
correct version of a package when resolving clever errors.

---

Check each box that your changes affect. If none of the boxes relate to
your changes, release notes aren't required.

For each box you select, include information after the relevant heading
that describes the impact of your changes that a user might notice and
any actions they must take to implement updates.

- [ ] Protocol:
- [ ] Nodes (Validators and Full nodes):
- [ ] Indexer:
- [ ] JSON-RPC:
- [X] GraphQL: Adds support for more understandable and ergonomic Move
error codes in Move 2024.
- [ ] CLI:
- [ ] Rust SDK:

--- a/external-crates/move/crates/move-command-line-common/Cargo.toml
+++ b/external-crates/move/crates/move-command-line-common/Cargo.toml
@@ -21,3 +21,6 @@ serde.workspace = true
 dirs-next.workspace = true
 
 move-core-types.workspace = true
+
+[dev-dependencies]
+proptest.workspace = true
