--- a/external-crates/move/crates/move-disassembler/Cargo.toml
+++ b/external-crates/move/crates/move-disassembler/Cargo.toml
@@ -18,6 +18,7 @@ move-ir-types.workspace = true
 move-binary-format.workspace = true
 move-coverage.workspace = true
 move-compiler.workspace = true
+move-abstract-interpreter.workspace = true
 
 bcs.workspace = true
 clap.workspace = true
