--- a/external-crates/move/crates/move-coverage/Cargo.toml
+++ b/external-crates/move/crates/move-coverage/Cargo.toml
@@ -24,6 +24,7 @@ move-core-types.workspace = true
 move-ir-types.workspace = true
 move-binary-format.workspace = true
 move-bytecode-source-map.workspace = true
+move-abstract-interpreter.workspace = true
 
 [features]
 default = []
