--- a/external-crates/move/move-execution/v1/crates/move-bytecode-verifier/Cargo.toml
+++ b/external-crates/move/move-execution/v1/crates/move-bytecode-verifier/Cargo.toml
@@ -18,6 +18,7 @@ move-bytecode-verifier-meter.workspace = true
 move-core-types.workspace = true
 move-vm-config.workspace = true
 move-abstract-stack.workspace = true
+move-abstract-interpreter.workspace = true
 
 [dev-dependencies]
 hex-literal.workspace = true
