--- a/external-crates/move/move-execution/v0/crates/move-bytecode-verifier/Cargo.toml
+++ b/external-crates/move/move-execution/v0/crates/move-bytecode-verifier/Cargo.toml
@@ -18,7 +18,7 @@ move-bytecode-verifier-meter.workspace = true
 move-core-types.workspace = true
 move-vm-config.workspace = true
 move-abstract-stack.workspace = true
-move-abstract-interpreter.workspace = true
+move-abstract-interpreter = { path = "../../../v2/crates/move-abstract-interpreter", package = "move-abstract-interpreter-v2" }
 
 [dev-dependencies]
 hex-literal.workspace = true
