--- a/.github/workflows/trigger-builds.yml
+++ b/.github/workflows/trigger-builds.yml
@@ -10,15 +10,17 @@ on:
       - 'releases/sui-*-release'
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
+env:
+  BRANCH_NAME: ${{ github.base_ref }}
 
 jobs:
   docker-images:
     runs-on: ubuntu-latest
-    if: (!contains(fromJSON('["graphql-rpc"]'), github.ref))
+    if: ${{ !contains(github.ref, 'sui-graphql-rpc') }}
     steps:
       - name: Dispatch Docker Builds in MystenLabs/sui-operations
         uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
-        with:
+        with: 
           repository: MystenLabs/sui-operations
           token: ${{ secrets.DOCKER_BINARY_BUILDS_DISPATCH }}
           event-type: build-docker-images
@@ -26,7 +28,7 @@ jobs:
 
   release-binaries:
     runs-on: ubuntu-latest
-    if: (!contains(fromJSON('["graphql-rpc"]'), github.ref))
+    if: ${{ !contains(github.ref, 'sui-graphql-rpc') }}
     steps:
       - name: Dispatch Release binaries builds in MystenLabs/sui-operations
         uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
@@ -38,7 +40,7 @@ jobs:
 
   graphql-artifacts:
     runs-on: ubuntu-latest
-    if: (contains(fromJSON('["graphql-rpc"]'), github.ref))
+    if: ${{ contains(github.ref, 'sui-graphql-rpc') }}
     steps:
       - name: Dispatch GraphQl artifact builds in MystenLabs/sui-operations
         uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
