sui-bridge: use bin-version

--- a/crates/sui-bridge/Cargo.toml
+++ b/crates/sui-bridge/Cargo.toml
@@ -28,8 +28,7 @@ sui-sdk.workspace = true
 sui-config.workspace = true
 clap.workspace = true
 tracing.workspace = true
-git-version.workspace = true
-const-str.workspace = true
+bin-version.workspace = true
 bcs.workspace = true
 sui-json-rpc-types.workspace = true
 serde.workspace = true
