sui: use bin-version

--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -28,8 +28,7 @@ inquire.workspace = true
 rusoto_core.workspace = true
 rusoto_kms.workspace = true
 prometheus.workspace = true
-git-version.workspace = true
-const-str.workspace = true
+bin-version.workspace = true
 num-bigint.workspace = true
 regex.workspace = true
 reqwest.workspace = true
