--- a/.github/workflows/github-issues-monitor.yml
+++ b/.github/workflows/github-issues-monitor.yml
@@ -50,13 +50,13 @@ jobs:
         channel-id: '#github-new-issues'
         payload: |
           {
-            "text": "New PR *${{ github.event.pull_request.number }}* opened by *${{ github.event.issue.user.login }}*",
+            "text": "New PR *${{ github.event.pull_request.number }}* opened by *${{ github.event.pull_request.user.login }}*",
             "blocks": [
               {
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": "New external PR <https://github.com/MystenLabs/sui/pull/${{ github.event.issue.number }}|${{ github.event.issue.number }}> opened by <https://github.com/${{ github.event.issue.user.login }}|${{ github.event.issue.user.login }}>. \n\n Please assign this PR to a team member on GitHub and mark this Slack message with :white_check_mark: once done."
+                  "text": "New external PR <https://github.com/MystenLabs/sui/pull/${{ github.event.pull_request.number }}|${{ github.event.pull_request.number }}> opened by <https://github.com/${{ github.event.pull_request.user.login }}|${{ github.event.pull_request.user.login }}>. \n\n Please assign this PR to a team member on GitHub and mark this Slack message with :white_check_mark: once done."
                 }
               }
             ]
