[CI] Fix github issues monitor workflow (#17515)
## Description 

Removes typo in the script + fixes an if condition.

## Test plan 

How did you test the new or updated feature?

---

## Release notes

Check each box that your changes affect. If none of the boxes relate to
your changes, release notes aren't required.

For each box you select, include information after the relevant heading
that describes the impact of your changes that a user might notice and
any actions they must take to implement updates.

- [ ] Protocol: 
- [ ] Nodes (Validators and Full nodes): 
- [ ] Indexer: 
- [ ] JSON-RPC: 
- [ ] GraphQL: 
- [ ] CLI: 
- [ ] Rust SDK:

--- a/.github/workflows/github-issues-monitor.yml
+++ b/.github/workflows/github-issues-monitor.yml
@@ -20,6 +20,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
+
     - name: Check if PR author is external
       id: step1
       env:
@@ -45,7 +46,7 @@ jobs:
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         RUN_JOB: ${{needs.external_pr.outputs.run_pr_slack_job}}
-      if:  ${{needs.external_pr.outputs.run_pr_slack_job}} == 'true'
+      if:  ${{needs.external_pr.outputs.run_pr_slack_job == 'true'}}
       with:
         channel-id: '#github-new-issues'
         payload: |
