--- a/sui-execution/Cargo.toml
+++ b/sui-execution/Cargo.toml
@@ -33,6 +33,7 @@ sui-verifier-v2 = { path = "v2/sui-verifier" }
 
 move-abstract-interpreter-latest = { path = "../external-crates/move/crates/move-abstract-interpreter", package = "move-abstract-interpreter" }
 move-abstract-interpreter-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-abstract-interpreter" }
+# move-abstract-interpreter-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-abstract-interpreter" }
 move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
 move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-bytecode-verifier" }
 move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
