--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -200,6 +200,7 @@ jobs:
       - name: Install postgres (Windows)
         shell: bash
         run: |
+          choco install mysql --force --params '/Password:root'
           choco install postgresql12 --force --params '/Password:root'
           echo "C:\Program Files\PostgreSQL\12\bin" >> $GITHUB_PATH
           echo "C:\Program Files\PostgreSQL\12\lib" >> $GITHUB_PATH
