--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -197,6 +197,7 @@ jobs:
         # this avoids rate-limiting
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install postgres (Windows)
         shell: bash
         run: |
@@ -206,11 +207,17 @@ jobs:
           echo "PQ_LIB_DIR=C:\Program Files\PostgreSQL\12\lib" >> $GITHUB_ENV
           echo "PG_DATABASE_URL=postgres://postgres:root@localhost/" >> $GITHUB_ENV
           echo "PG_EXAMPLE_DATABASE_URL=postgres://postgres:root@localhost/diesel_example" >> $GITHUB_ENV
-      - name: cargo build
+
+      - name: Install MySql Connector
+        shell: bash
         run: |
-          choco install mysql --force --params '/Password:root'
+          choco install mysql-connector --force --params '/Password:root'
           echo "MYSQLCLIENT_LIB_DIR=C:\Program Files\MySQL\MySQL Connector C 6.1\lib\vs14" >> $GITHUB_ENV
           cargo install diesel_cli --no-default-features --features mysql
+
+      - name: cargo build
+        run: |
+          
           cargo build --all-features
         shell: bash
 
