--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -198,26 +198,25 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install postgres (Windows)
-        shell: bash
-        run: |
-          choco install postgresql12 --force --params '/Password:root'
-          echo "C:\Program Files\PostgreSQL\12\bin" >> $GITHUB_PATH
-          echo "C:\Program Files\PostgreSQL\12\lib" >> $GITHUB_PATH
-          echo "PQ_LIB_DIR=C:\Program Files\PostgreSQL\12\lib" >> $GITHUB_ENV
-          echo "PG_DATABASE_URL=postgres://postgres:root@localhost/" >> $GITHUB_ENV
-          echo "PG_EXAMPLE_DATABASE_URL=postgres://postgres:root@localhost/diesel_example" >> $GITHUB_ENV
+      # - name: Install postgres (Windows)
+      #   shell: bash
+      #   run: |
+      #     choco install postgresql12 --force --params '/Password:root'
+      #     echo "C:\Program Files\PostgreSQL\12\bin" >> $GITHUB_PATH
+      #     echo "C:\Program Files\PostgreSQL\12\lib" >> $GITHUB_PATH
+      #     echo "PQ_LIB_DIR=C:\Program Files\PostgreSQL\12\lib" >> $GITHUB_ENV
+      #     echo "PG_DATABASE_URL=postgres://postgres:root@localhost/" >> $GITHUB_ENV
+      #     echo "PG_EXAMPLE_DATABASE_URL=postgres://postgres:root@localhost/diesel_example" >> $GITHUB_ENV
 
       - name: Install MySql Connector
         shell: bash
         run: |
           choco install mysql-connector --force --params '/Password:root'
-          echo "MYSQLCLIENT_LIB_DIR=C:\Program Files\MySQL\MySQL Connector C 6.1\lib\vs14" >> $GITHUB_ENV
-          cargo install diesel_cli --no-default-features --features mysql
+          ls -al C:\Program Files\MySQL
+          echo "MYSQLCLIENT_LIB_DIR=C:\Program Files\MySQL\MySQL Connector C 8.0\lib\vs14" >> $GITHUB_ENV
 
       - name: cargo build
         run: |
-          
           cargo build --all-features
         shell: bash
 
