--- a/nre/helm/graphql/templates/secrets.yaml
+++ b/nre/helm/graphql/templates/secrets.yaml
@@ -4,5 +4,5 @@ metadata:
   name: {{ .Values.secretName }}
 type: Opaque
 data:
-  sensitive-config.conf: {{ .Files.Get "files/secrets/sensitive-config.conf" | b64enc | quote }}
+  db_url.conf: {{ .Values.db_url }}
 
