--- a/nre/helm/graphql/values.yaml
+++ b/nre/helm/graphql/values.yaml
@@ -17,14 +17,14 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Automatically mount a ServiceAccount's API credentials?
   automount: true
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  name: "graphql-sa"
 
 podAnnotations: {}
 podLabels: {}
@@ -49,9 +49,8 @@ ingress:
   className: ""
   annotations:
     prometheus.io/path: "/metrics"
-	prometheus.io/port: "9184"
-	prometheus.io/scrape: "true"
-    # kubernetes.io/ingress.class: nginx
+    prometheus.io/port: "9184"
+    prometheus.io/scrape: "true"
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
