Modify docker image builder for add scalaris extension

--- a/docker/sui-node/Dockerfile
+++ b/docker/sui-node/Dockerfile
@@ -7,7 +7,7 @@ ARG PROFILE=release
 ARG GIT_REVISION
 ENV GIT_REVISION=$GIT_REVISION
 WORKDIR "$WORKDIR/sui"
-RUN apt-get update && apt-get install -y cmake clang
+RUN apt-get update && apt-get install -y cmake clang protobuf-compiler
 
 COPY Cargo.toml Cargo.lock ./
 COPY consensus consensus
