--- a/external-crates/move/move-execution/v1/crates/bytecode-verifier-tests/Cargo.toml
+++ b/external-crates/move/move-execution/v1/crates/bytecode-verifier-tests/Cargo.toml
@@ -20,6 +20,7 @@ move-bytecode-verifier = { path = "../move-bytecode-verifier", package = "move-b
 move-bytecode-verifier-meter.workspace = true
 move-core-types.workspace = true
 move-vm-config.workspace = true
+move-abstract-interpreter = { path = "../../../v2/crates/move-abstract-interpreter", package = "move-abstract-interpreter-v2" }
 
 [features]
 fuzzing = ["move-binary-format/fuzzing"]
