--- a/crates/sui-rest-api/Cargo.toml
+++ b/crates/sui-rest-api/Cargo.toml
@@ -17,6 +17,8 @@ serde_json.workspace = true
 serde_with.workspace = true
 tap.workspace = true
 thiserror.workspace = true
+async-trait.workspace = true
+itertools.workspace = true
 sui-sdk2.workspace = true
 
 fastcrypto.workspace = true
