--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -86,6 +86,7 @@ sui-framework.workspace = true
 sui-swarm-config.workspace = true
 sui-genesis-builder.workspace = true
 sui-json-rpc-types.workspace = true
+sui-rest-api.workspace = true
 sui-macros.workspace = true
 sui-move-build.workspace = true
 sui-network.workspace = true
