--- a/crates/sui-e2e-tests/Cargo.toml
+++ b/crates/sui-e2e-tests/Cargo.toml
@@ -59,4 +59,5 @@ sui-json-rpc-types.workspace = true
 sui.workspace = true
 sui-sdk.workspace = true
 sui-keys.workspace = true
+sui-rest-api.workspace = true
 shared-crypto.workspace = true
