--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -31,18 +31,18 @@ jobs:
           private_key: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: checkout code repository
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # Pin v4.1.1
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
         with:
           token: ${{ steps.generate_token.outputs.token }}
           fetch-depth: 0
       - uses: pnpm/action-setup@a3252b78c470c02df07e9d59298aecedc3ccdd6d # pin@v3.0.0
         with:
-          version: 8
+          version: 9
       - name: Install Nodejs
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # pin@v4.0.2
         with:
-          node-version: "18"
-          cache: "pnpm"
+          node-version: '18'
+          cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Create Release Pull Request
