--- a/.github/workflows/github-issues-monitor.yml
+++ b/.github/workflows/github-issues-monitor.yml
@@ -7,20 +7,24 @@ on:
     types: [opened]
 
 jobs: 
-  notify:
-    name: Dispatch workflow to notify slack channel
+  notify-prs:
+    name: Dispatch workflow to notify slack channel on PRs
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - name: Dispatch github-issues-external-prs-monitor in MystenLabs/sui-operations
-        if: ${{github.event_name == 'pull_request'}}
         uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
         with: 
           repository: MystenLabs/sui-operations
           event-type: github-issues-external-prs-monitor
           client-payload: '{"author": "${{github.event.pull_request.user.login}}", "event_name": "pull_request", "pull_request_number": "${{github.event.pull_request.number}}"}'
 
+  notify-issues:
+    name: Dispatch workflow to notify slack channel on issues
+    if: github.event_name == 'issues'
+    runs-on: ubuntu-latest
+    steps:
       - name: Dispatch github-issues-external-prs-monitor in MystenLabs/sui-operations
-        if: ${{github.event_name == 'issues'}}
         uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # pin@v3.0.0
         with: 
           repository: MystenLabs/sui-operations
