--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,10 +42,10 @@ jobs:
       matrix:
         os:
           [
-            # windows-ghcloud,
+            windows-ghcloud,
             ubuntu-ghcloud,
-            # macos-latest-xl,
-            # macos-arm64-self-hosted
+            macos-latest-xl,
+            macos-arm64-self-hosted
           ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
