--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -143,6 +143,7 @@ jobs:
           mkdir -p ${{ env.TMP_BUILD_DIR }}
 
           for binary in $(cat ./binary-build-list.json | jq -r '.release_binaries[]'); do
+            export binary=$(echo ${binary} | tr -d $'\r')
             mv ./target/release/${binary}${{ env.extention }} ${{ env.TMP_BUILD_DIR }}/${binary}${{ env.extention }}
           done
 
